--- a/components.json
+++ b/components.json
@@ -5,17 +5,17 @@
   "tsx": true,
   "tailwind": {
     "config": "",
-    "css": "src/app/styles/globals.css",
+    "css": "@/app/styles/globals.css",
     "baseColor": "slate",
     "cssVariables": true,
     "prefix": ""
   },
   "aliases": {
     "components": "@/shared/components",
-    "utils": "@shared/lib/utils",
+    "utils": "@/shared/lib/utils",
     "ui": "@/shared/ui",
-    "lib": "@shared/lib",
-    "hooks": "@shared/hooks"
+    "lib": "@/shared/lib",
+    "hooks": "@/shared/lib/hooks"
   },
   "iconLibrary": "lucide"
 }
